# leadscoringapp

./: .gitignore  .pre-commit-config.yaml  Back_End_Dev_Doc.md  Dockerfile  Fornt_End_Dev_Doc.md  PRD_Ver2.md  README.md  UI_UX_Doc.md  alembic.ini  index.html  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  pyproject.toml  requirements.txt  vite.config.ts
.idx/: dev.nix
backend/: auth.py  database.py  main.py  models.py  schemas.py
backend/alembic/: env.py
backend/alembic/versions/: 1_initial_migration.py
frontend/: .env.example  package-lock.json
frontend/public/: firebase-messaging-sw.js
frontend/src/: App.tsx  firebase.d.ts  firebase.ts  main.tsx
frontend/src/components/auth/: LoginPage.tsx  ProtectedRoute.tsx
frontend/src/components/layout/: Sidebar.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: AgentBuilder.tsx  FlowBuilderPage.tsx  Home.tsx
scripts/: init_db.py
src/: App.tsx  main.tsx
src/components/auth/: LoginPage.tsx  ProtectedRoute.tsx
src/components/layout/: MainLayout.tsx  Sidebar.tsx
src/context/: AuthContext.tsx
src/lib/: api.ts
src/pages/: AiAgentsPage.tsx  AnalyticsPage.tsx  CampaignsPage.tsx  DashboardPage.tsx  FlowBuilderPage.tsx  InboxPage.tsx  IntegrationsPage.tsx  LeadsPage.tsx  SettingsPage.tsx
