[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["RaaR Agency <raaragency@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
sqlmodel = "^0.0.12"
psycopg2-binary = "^2.9.9"
firebase-admin = "^6.2.0"
alembic = "^1.12.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
